Complete structural redesign of the website structure.
The majority of headers are now collapsible on mobile devices.  The main div element design has been
simplified with the "main_box" div boxes removed and the "main_h2" and "main_h3" classes eliminated
and instead the h2 and h2 elements formatted.  The structure has been standardised on all pages,
including only using h1 elements for the page title.

--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2006-2016 Edward d'Auvergne.
+    Copyright (c) 2006-2021 Edward d'Auvergne.
     Copyright (c) 2011 Sebastien Morin.
 
     Permission is granted to copy, distribute and/or modify this document
@@ -29,9 +29,7 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-<!-- Index -->
-  <div class="main_box">
-    <h1>relax downloads</h1>
+ <h1>relax downloads</h1>
 
     <ul>
     <li><a href="download.html#Current_release">Current release</a>
@@ -62,12 +60,11 @@
       <li><a href="download.html#series_1.0">1.0 series</a></li>
      </ul></li>
     </ul>
-  </div>
 
 
 <!-- Current release -->
-  <div id="Current_release" class="main_box">
-    <h1>Current release</h1>
+   <h2 id="Current_release" class="collapsible_section">Current release</h2>
+   <div class="section_content">
 
     <p>The current stable release is <a href="http://wiki.nmr-relax.com/Relax_5.0.0">relax version 5.0.0</a> <em>(24 August 2020)</em>.</p>
 
@@ -76,8 +73,8 @@
       <p>For details about the relax GPG signatures and their usage, see the Security section at the <a href="download.html#Security">end of this page</a>.</p>
 
 <!-- Dependencies -->
-    <div id="Dependencies" class="main_h2">
-      <h2>Dependencies</h2>
+    <h3 class="collapsible_section" id="Dependencies">Dependencies</h3>
+    <div class="section_content">
 
         <p>Minimally <a href="http://www.python.org">Python</a>, <a href="http://www.numpy.org/">NumPy</a>, <a href="http://wiki.nmr-relax.com/minfx">minfx</a>, and <a href="http://wiki.nmr-relax.com/Bmrblib">bmrblib</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
 
@@ -135,12 +132,12 @@
           </table>
 
           <p>Note that when using the <a href="download.html#Mac_app">Mac OS X relax application</a>, that all these packages will be bundled with the application and hence do not need to be installed.</p>
-    </div>
+    </div> <!-- End of h3 section_content -->
 
 
 <!-- GNU Linux -->
-    <div id="GNU_Linux" class="main_h2">
-      <h2>GNU/Linux</h2>
+    <h3 id="GNU_Linux" class="collapsible_section">GNU/Linux</h3>
+    <div class="section_content">
 
       <p>Pre-compiled binary releases for GNU/Linux can be downloaded for both 32-bit (i686) and 64-bit (x86_64) machines.  These have been compiled for Python 2.7, though should work for versions 2.5 and 2.6.  But if there are problems with the compiled C modules, please either use the <a href="download.html#Source_code_release">source distribution</a> or install <a href="download.html#dep_versions">Python 2.7</a>.</p>
 
@@ -168,13 +165,14 @@
     </tr>
   </tbody>
 </table>
-    </div>
+    </div> <!-- End of h3 section_content -->
 
 
 
 <!-- MS Windows -->
-    <div id="MS_Windows" class="main_h2">
-      <h2>MS Windows</h2>
+    <h3 id="MS_Windows" class="collapsible_section">MS Windows</h3>
+    <div class="section_content">
+
       <p>The pre-compiled binary release for 32 bit Windows can be downloaded from the link below.  These have been compiled for Python 2.7 therefore if there are problems with the compiled C modules and the command:</p>
       <p><em>$ relax --info</em></p>
       <p>says that the C modules are not installed, please install <a href="download.html#dep_versions">Python 2.7</a>.</p>
@@ -198,18 +196,18 @@
   </tbody>
 </table>
 
-        <h3>System path</h3>
+        <h4>System path</h4>
          <p>To execute relax, both the relax and Python installation directories will need to be added to the system path.  For MS Windows the instructions for modifying the system path are given <a href="windows_devel.html#path">here</a>.</p>
-    </div>
+    </div> <!-- End of h3 section_content -->
 
 
 
 <!-- Mac OS X -->
-    <div id="Mac_OS_X" class="main_h2">
-      <h2>Mac OS X</h2>
+    <h3 id="Mac_OS_X" class="collapsible_section">Mac OS X</h3>
+    <div class="section_content">
         <p>There are 3 ways of installing relax on a Mac.  These are using the pre-compiled relax application, Fink or the <a href="download.html#Source_code_release">source releases</a>.  If you are a fan of the <a href="http://brew.sh/">Homebrew</a> project, please read this <a href="http://thread.gmane.org/gmane.science.nmr.relax.user/1365">detailed explanation</a> for how to set up relax using the source release.</p>
 
-        <h3 id="Mac_app">Stand-alone application</h3>
+        <h4 id="Mac_app">Stand-alone application</h4>
 
         <p>The stand-alone relax application requires none of the dependencies listed below to be installed.  It is a universal binary compiled for i386, x86-64 and ppc64 (fat3) with the Mac OS X 10.5 framework.  It should therefore run on most Mac OS X systems at or above version 10.5.</p>
 
@@ -253,7 +251,7 @@
 </table>
 
 
-        <h3>Fink</h3>
+        <h4>Fink</h4>
 
           <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.7 with the command:</p>
 
@@ -270,13 +268,13 @@
             <li><a href="http://pdb.finkproject.org/pdb/package.php/relax-py24">relax-py24</a></li>
           </ul>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
 
 
 <!-- Source code -->
-    <div id="Source_code_release" class="main_h2">
-      <h2>Source code release (for all other systems)</h2>
+    <h3 id="Source_code_release" class="collapsible_section">Source code release (for all other systems)</h3>
+    <div class="section_content">
 
         <p>The program source, in which all functions except for relaxation curve fitting will be available without compilation, and associated GPG signatures (see the Security section below) can be downloaded from:</p>
 
@@ -306,24 +304,25 @@
 </table>
 
 
-         <h3 id="compilation">Compilation</h3>
+         <h4 id="compilation">Compilation</h4>
          <p>For compiling the C modules relax uses the <a href='http://www.scons.org/'>SCons</a> cross platform compilation tool.   Building these modules is currently only required for the exponential curve fitting used to determine the R<sub>1</sub> and R<sub>2</sub> relaxation rates.  By <a href='http://www.scons.org/download.php'>downloading</a> and installing <em>SCons</em> and running the command:</p>
 
           <p><em>> scons</em></p>
 
           <p>in the relax base directory, the modules should automatically compile.  This should work on all operating systems assuming that a C compiler is present.  The Python header or development files also need to be installed.  These files are installed with Python on MS Windows, but needs to be installed as a separate package often called something like python-devel on GNU/Linux and Mac OS X.  If an error occurs on MS Windows, read the instructions <a href="windows_devel.html#MSVS_probs">here</a>.</p>
 
-         <h3>Development platforms</h3>
+         <h4>Development platforms</h4>
           <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a> on MS Windows, for compiling the LaTeX manual, and generating relax distribution packages.</p>
 
-   </div>
-</div>
+    </div> <!-- End of h3 section_content -->
+
+   </div> <!-- End of h2 section_content -->
 
 
 
 <!-- Source code repository -->
-<div id="Source_code_repository" class="main_box">
-    <h1>Source code repository</h1>
+   <h2 id="Source_code_repository" class="collapsible_section">Source code repository</h2>
+   <div class="section_content">
 
     <p>The most up-to-date code can be obtained from the relax <a href="https://sourceforge.net/projects/nmr-relax/" title="The relax git source code repository.">source code repository</a> using one of the following commands (which involve the program <a href="https://git-scm.com/">git</a>):</p>
 
@@ -335,41 +334,41 @@
 
     <p>Keep in mind that since this code changes often, it could sometimes be unstable and non functional.</p>
 
-</div>
+   </div> <!-- End of h2 section_content -->
 
 
 
 <!-- Security -->
-<div id="Security" class="main_box">
-    <h1>Security</h1>
+   <h2 id="Security" class="collapsible_section">Security</h2>
+   <div class="section_content">
 
     <p>To check that the file has not been compromised, first download the GPG signature for the distribution package.  Then, to test this signature, download the relax <a href="https://gna.org/project/memberlist-gpgkeys.php?group=relax" title="relax GPG public key">public key</a> and run the command:</p>
 
       <p><em>> gpg --verify --default-key relax relax-x.x.x.release_type.file_type.sig</em></p>
 
       <p>where <em>x.x.x</em> is the program version; <em>release_type</em> is one of 'GNU-Linux.i686', 'Darwin', 'Win32', or 'src'; and <em>file_type</em> is either 'tar.bz2', 'zip', or 'dmg'.  The GPG program can be downloaded from the <a href='http://www.gnupg.org/'>GNU Privacy Guard</a> web site.</p>
-  </div>
+   </div> <!-- End of h2 section_content -->
 
 
 
 <!-- New releases -->
-  <div id="New_releases" class="main_box">
-    <h1>New releases</h1>
+   <h2 id="New_releases" class="collapsible_section">New releases</h2>
+   <div class="section_content">
 
       <p>New versions of relax are announced on the relax-announce mailing list.  For a description of this list and instructions on how to subscribe to it, please read the relax <a href="communication.html#mailing-lists">mailing list</a> section of the <a href='communication.html'>communication page</a>.</p>
-  </div>
+   </div> <!-- End of h2 section_content -->
 
 
 
 <!-- All releases -->
-  <div id="All_releases" class="main_box">
-    <h1>All releases</h1>
+   <h2 id="All_releases" class="collapsible_section">All releases</h2>
+   <div class="section_content">
 
     <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="https://sourceforge.net/projects/nmr-relax/files/">relax download site</a> or are <a href="https://sourceforge.net/projects/nmr-relax/files/4.0.1/">available upon request</a>.</p>
 
 
-    <div id="series_5.0" class="main_h2">
-      <h2>The 5.0 series</h2>
+    <h3 id="series_5.0" class="collapsible_section">The 5.0 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -424,10 +423,10 @@
 
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_4.1" class="main_h2">
-      <h2>The 4.1 series</h2>
+    <h3 id="series_4.1" class="collapsible_section">The 4.1 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -596,10 +595,10 @@
 
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_4.0" class="main_h2">
-      <h2>The 4.0 series</h2>
+    <h3 id="series_4.0" class="collapsible_section">The 4.0 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -767,11 +766,10 @@
 
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-
-    <div id="series_3.3" class="main_h2">
-      <h2>The 3.3 series</h2>
+    <h3 id="series_3.3" class="collapsible_section">The 3.3 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -1167,11 +1165,10 @@
 
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-
-    <div id="series_3.2" class="main_h2">
-      <h2>The 3.2 series</h2>
+    <h3 id="series_3.2" class="collapsible_section">The 3.2 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -1339,10 +1336,10 @@
 
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_3.1" class="main_h2">
-      <h2>The 3.1 series</h2>
+    <h3 id="series_3.1" class="collapsible_section">The 3.1 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -1662,10 +1659,10 @@
   </tbody>
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_3.0" class="main_h2">
-      <h2>The 3.0 series</h2>
+    <h3 id="series_3.0" class="collapsible_section">The 3.0 series</h3>
+    <div class="section_content">
 
 
 <table class="release_table">
@@ -1795,10 +1792,10 @@
   </tbody>
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_2.2" class="main_h2">
-      <h2>The 2.2 series</h2>
+    <h3 id="series_2.2" class="collapsible_section">The 2.2 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -2041,10 +2038,10 @@
   </tbody>
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_2.1" class="main_h2">
-      <h2>The 2.1 series</h2>
+    <h3 id="series_2.1" class="collapsible_section">The 2.1 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -2173,10 +2170,10 @@
   </tbody>
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_2.0" class="main_h2">
-      <h2>The 2.0 series</h2>
+    <h3 id="series_2.0" class="collapsible_section">The 2.0 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -2229,10 +2226,10 @@
   </tbody>
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_1.3" class="main_h2">
-      <h2>The 1.3 series</h2>
+    <h3 id="series_1.3" class="collapsible_section">The 1.3 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   </thead>
@@ -2811,10 +2808,10 @@
   </tbody>
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_1.2" class="main_h2">
-      <h2>The 1.2 series</h2>
+    <h3 id="series_1.2" class="collapsible_section">The 1.2 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -3186,10 +3183,10 @@
   </tbody>
 </table>
 
-    </div>
+    </div> <!-- End of h3 section_content -->
 
-    <div id="series_1.0" class="main_h2">
-      <h2>The 1.0 series</h2>
+    <h3 id="series_1.0" class="collapsible_section">The 1.0 series</h3>
+    <div class="section_content">
 
 <table class="release_table">
   <thead>
@@ -3292,9 +3289,8 @@
   </tbody>
 </table>
 
-    </div>
-
-  </div>
+    </div> <!-- End of h3 section_content -->
+   </div> <!-- End of h2 section_content -->
 </div>
 
 <!-- Common relax webpage footer include -->
