--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2005-2012 Edward d'Auvergne.
+    Copyright (c) 2005-2012,2021 Edward d'Auvergne.
 
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.3
@@ -28,7 +28,6 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-  <div class="main_box">
     <h1>Frequently Asked Questions (FAQ)</h1>
 
     <ul>
@@ -37,34 +36,38 @@
     <li><a href="faq.html#radian_units">The equations (or units) used by relax are incorrect!</a></li>
     <li><a href="faq.html#missing_icons">The menu icons are missing in Linux.</a></li>
     </ul>
-  </div>
 
-  <div class="main_box">
-     <h3 id="source_code">How do I obtain the newest relax source code?</h3>
+    <h2 id="source_code" class="collapsible_section">How do I obtain the newest relax source code?</h2>
+    <div class="section_content">
 
       <p>To obtain the most up to date copy of the relax source code without waiting for a new release, the new code can be checked out from the repository by typing:</p>
       <p><em>$ git clone git://git.code.sf.net/p/nmr-relax/code relax</em></p>
       <p>If you already have a checked out copy, try typing:</p>
       <p><em>$ git pull</em></p>
       <p>This requires installation of the <a href="https://git-scm.com/">git</a> program.  If the fitting of the R<sub>1</sub> and R<sub>2</sub> NMR relaxation rates is required, the relaxation curve-fitting C modules will need to be compiled using <a href="http://www.scons.org/">SCons</a>.  For more information, see the compilation subsection of the <a href="download.html#Source_code_repository">relax downloads</a> page.</p>
+    </div> <!-- End of h2 section_content -->
 
-     <h3 id="source_code_branch">How do I check out a relax source code branch?</h3>
+    <h2 id="source_code_branch" class="collapsible_section">How do I check out a relax source code branch?</h2>
+    <div class="section_content">
 
       <p>Sometimes code for a new analysis type or a new feature is developed within a development branch within the <a href="https://sourceforge.net/p/nmr-relax/code/ci/master/tree/">relax repository</a>.  To obtain for example the incomplete wxPython-Pheonix relax branch, type:</p>
       <p><em>$ git checkout wxPython-Phoenix/r2</em></p>
+    </div> <!-- End of h2 section_content -->
 
-     <h3 id="radian_units">The equations (or units) used by relax are incorrect!</h3>
+    <h2 id="radian_units" class="collapsible_section">The equations (or units) used by relax are incorrect!</h2>
+    <div class="section_content">
 
       <p>This is more a commonly stated point rather than a question.  But if you believe that NMR relaxation data should be measured in Hertz, that the molecular correlation times or internal correlation times do not contain radian units, that the units for spherical harmonics is not radians, or that the rotation power spectral density functions do not contain radian units, the following links are for you.</p>
       <p>Radians are a dimensionless and hidden unit ubiquitous to NMR.  A <a href="http://permalink.gmane.org/gmane.science.nmr.relax.user/723">detailed description of this hidden radian unit as used in NMR</a> has been written as reference for understanding the unit in the context of the SI system.  Copies of this description can also be found <a href="http://marc.info/?l=relax-users&amp;m=135070801026465&amp;w=2">here</a>, <a href="mail.gna.org/public/relax-users/2009-01/msg00000.html">here</a> or <a href="http://www.mail-archive.com/relax-users@gna.org/msg00582.html">here</a>.</p>
       <p>A <a href="http://permalink.gmane.org/gmane.science.nmr.relax.devel/1034">detailed derivation in the context of Abragam's relaxation equations</a> may also help.  Copies of this derivation can be found <a href="mail.gna.org/public/relax-devel/2007-06/msg00012.html">here</a> or <a href="http://www.mail-archive.com/relax-devel@gna.org/msg00975.html">here</a> as well.</p>
+    </div> <!-- End of h2 section_content -->
 
-     <h3 id="missing_icons">The menu icons are missing in Linux.</h3>
+     <h2 id="missing_icons" class="collapsible_section">The menu icons are missing in Linux.</h2>
+    <div class="section_content">
 
       <p>On some Linux systems, the icons for the menu items are not shown.  This was a decision taken by the Gnome developers at some point to keep the GUI minimal, though in recent versions this behaviour has been reverted.  If you suffer from this problem, to reactive the icons simply type in the shell:</p>
       <p><em>$ gconftool-2 --type boolean --set /desktop/gnome/interface/menus_have_icons true</em></p>
-
-  </div>
+    </div> <!-- End of h2 section_content -->
 
 </div>
 
