--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2005-2012 Edward d'Auvergne.
+    Copyright (c) 2005-2012,2021 Edward d'Auvergne.
 
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.3
@@ -28,10 +28,12 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-  <div class="main_box">
-    <h1>relax</h1>
+ <h1>relax</h1>
 
     <p>The program relax is a software package designed for the study of molecular dynamics through the analysis of experimental NMR data.  Organic molecules, proteins, RNA, DNA, sugars, and other biomolecules are all supported.  It was originally written for the model-free analysis of protein dynamics, though its scope has been significantly expanded.</p>
+
+    <h2 class="collapsible_section">Analyses</h2>
+    <div class="section_content">
 
     <p>relax is a community driven project created by NMR spectroscopists for NMR spectroscopists.  It supports a diverse range of analyses:</p>
     <ul>
@@ -46,27 +48,27 @@
     </ul>
 
     <p>The full list of features is described <a href="features.html">here</a>.</p>
+    </div> <!-- End of h2 section_content -->
 
-    <div class="main_h2">
-       <h2>Flexibility</h2>
+    <h2 class="collapsible_section">Flexibility</h2>
+    <div class="section_content">
 
           <p>The aim of relax is to provide a seamless and extremely flexible environment able to accept input in any format produced by other NMR software, able to faultlessly create input files, control, and read output from various model-free programs including <a href="http://www.palmer.hs.columbia.edu/software/modelfree.html">Modelfree</a> and <a href="https://web.archive.org/web/http://www.nmr.ru/dasha.html">Dasha</a>, output results in many formats, and visualise the data by controlling programs such as <a href="http://plasma-gate.weizmann.ac.il/Grace/">Grace</a>, <a href="http://www.opendx.org">OpenDX</a>, and <a href="http://sourceforge.net/projects/molmol/">MOLMOL</a>.</p>
 
           <p>All data analysis tools from optimisation to model selection to Monte Carlo simulations are inbuilt into relax.  Therefore the use of additional programs is optional.</p>
-    </div>
+    </div> <!-- End of h2 section_content -->
 
-    <div class="main_h2">
-      <h2>The power of Python</h2>
+    <h2 class="collapsible_section">The power of Python</h2>
+    <div class="section_content">
 
         <p>The flexibility of relax arises from the choice of either relax's scripting capabilities or its Python prompt interface.  Extremely complex scripts can be created from simple building blocks to fully automate data analysis.  A number of sample scripts have been provided to help understand script construction.  In addition, any of Python's powerful features or functions can be incorporated as the script is executed as an arbitrary Python source file within relax's environment.</p>
-    </div>
+    </div> <!-- End of h2 section_content -->
 
-    <div class="main_h2">
-      <h2>Open Source</h2>
+    <h2 class="collapsible_section">Open Source</h2>
+    <div class="section_content">
 
         <p>relax is free software (free as in freedom) which is licenced under the GNU General Public Licence (GPL).  You are free to copy, modify, or redistribute relax under the terms of the GPL.  For more information, see the program documentation.</p>
-    </div>
-  </div>
+    </div> <!-- End of h2 section_content -->
 </div>
 
 <!-- Common relax webpage footer include -->
