--- a/refs.html
+++ b/refs.html
@@ -29,10 +29,9 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
- <div class="main_box">
   <h1>References</h1>
 
-   <h2 id="relax" class="main_h2 collapsible_section">The program relax</h2>
+   <h2 id="relax" class="collapsible_section">The program relax</h2>
    <div class="section_content">
 
     <p>The main references for the software relax are:</p>
@@ -56,7 +55,7 @@
 
 
 
-   <h2 id="model_free" class="main_h2 collapsible_section">Model-free analysis</h2>
+   <h2 id="model_free" class="collapsible_section">Model-free analysis</h2>
    <div class="section_content">
 
    <p>For a model-free analysis using relax, the following references should be cited.</p>
@@ -135,7 +134,7 @@
    </div> <!-- End of h3 section_content -->
   </div> <!-- End of h2 section_content -->
 
-   <h2 id="consistency_testing" class="main_h2 collapsible_section">Consistency testing</h2>
+   <h2 id="consistency_testing" class="collapsible_section">Consistency testing</h2>
    <div class="section_content">
 
     <p>The primary reference for the consistency testing of relaxation data in relax is:</p>
@@ -151,7 +150,7 @@
     </ul>
   </div> <!-- End of h2 section_content -->
 
-   <h2 id="n_state" class="main_h2 collapsible_section">Ensemble or N-state model</h2>
+   <h2 id="n_state" class="collapsible_section">Ensemble or N-state model</h2>
    <div class="section_content">
 
     <p>For the ensemble analysis, also known as the N-state model, in relax the following references are important:</p>
@@ -162,7 +161,7 @@
     </ul>
    </div> <!-- End of h2 section_content -->
 
-   <h2 id="relax_disp" class="main_h2 collapsible_section">Relaxation dispersion</h2>
+   <h2 id="relax_disp" class="collapsible_section">Relaxation dispersion</h2>
    <div class="section_content">
 
     <p>The primary reference for the relaxation dispersion analysis implemented in relax is:</p>
@@ -172,7 +171,7 @@
     </ul>
    </div> <!-- End of h2 section_content -->
 
-   <h2 id="frame_order" class="main_h2 collapsible_section">Frame order</h2>
+   <h2 id="frame_order" class="collapsible_section">Frame order</h2>
    <div class="section_content">
 
     <p>The reference for the frame order analysis for analysing the motions between rigid bodies in a molecule is:</p>
@@ -182,7 +181,7 @@
     </ul>
    </div> <!-- End of h2 section_content -->
 
-   <h2 id="misc" class="main_h2 collapsible_section">Miscellaneous</h2>
+   <h2 id="misc" class="collapsible_section">Miscellaneous</h2>
    <div class="section_content">
     <ul class="ref_ul">
      <li id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.  (<a href="http://dx.doi.org/10.1023/b:jnmr.0000032504.70912.58">DOI: 10.1023/b:jnmr.0000032504.70912.58</a>)</li>
@@ -197,7 +196,6 @@
     </ul>
    </div> <!-- End of h2 section_content -->
 
- </div>
 </div>
 
 <!-- Common relax webpage footer include -->
