--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2005-2012 Edward d'Auvergne.
+    Copyright (c) 2005-2012,2021 Edward d'Auvergne.
 
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.3
@@ -29,7 +29,6 @@
 <!--#include virtual="../menu.html" -->
 
 <div class="main">
-  <div class="main_box">
     <h1>Relaxation dispersion analysis</h1>
 
       <p>Since the release of <a href="http://wiki.nmr-relax.com/Relax_3.1.0">relax version 3.1.0</a>, relax supports the <a href="/manual/Relaxation_dispersion.html">analysis of NMR relaxation dispersion data</a> (see <a href="../refs.html#Morin14">Morin et al., 2014</a>).  All dispersion data types are supported as well as an almost complete list of relaxation dispersion models, both analytic and numeric.</p>
@@ -38,10 +37,9 @@
       <li><a href="relaxation_dispersion.html#data">Relaxation dispersion data</a></li>
       <li><a href="relaxation_dispersion.html#models">Relaxation dispersion models</a></li>
     </ul>
-  </div>
 
-  <div class="main_box" id="data">
-   <h2>Data types</h2>
+   <h2 id="data" class="collapsible_section">Data types</h2>
+   <div class="section_content">
     <p>The following relaxation dispersion data types are supported by relax:</p>
 
     <ul>
@@ -52,13 +50,14 @@
      <li>Combined proton-heteronuclear SQ, ZQ, DQ and MQ CPMG-type data.  This is labelled as multiple MQ or MMQ data.</li>
      <li>R<sub>1&#961;</sub>-type data.</li>
     </ul>
-  </div>
+   </div> <!-- End of h2 section_content -->
 
-  <div class="main_box" id="models">
-   <h2>Models</h2>
+   <h2 id="models" class="collapsible_section">Models</h2>
+   <div class="section_content">
     <p>Numerous analytic and numeric relaxation dispersion models are supported by relax.  It the model you are interested is not yet supported, please see the <a href="http://wiki.nmr-relax.com/Tutorial_for_adding_relaxation_dispersion_models_to_relax">tutorial for adding dispersion models to relax</a>.</p>
 
-   <h3>Experiment independent models</h3>
+   <h3 class="collapsible_section">Experiment independent models</h3>
+   <div class="section_content">
     <p>The following models are independent of the experiment type:</p>
 
     <ul>
@@ -80,8 +79,10 @@
         <a href="/api/3.2/target_functions.relax_disp.Dispersion-class.html#func_NOREX">API documentation</a>).
       </li>
     </ul>
+   </div> <!-- End of h3 section_content -->
 
-   <h3>Analytic models for SQ CPMG-type experiments</h3>
+   <h3 class="collapsible_section">Analytic models for SQ CPMG-type experiments</h3>
+   <div class="section_content">
     <p>The following analytic models are designed for the standard single quantum CPMG-type experiments:</p>
 
     <ul>
@@ -154,8 +155,10 @@
         <a href="/api/3.2/lib.dispersion.b14-module.html">API documentation</a>).
       </li>
     </ul>
+   </div> <!-- End of h3 section_content -->
 
-   <h3>Numeric models for SQ CPMG-type experiments</h3>
+   <h3 class="collapsible_section">Numeric models for SQ CPMG-type experiments</h3>
+   <div class="section_content">
     <p>The following analytic models are designed for the standard single quantum CPMG-type experiments:</p>
 
     <ul>
@@ -203,8 +206,10 @@
         <a href="/api/3.2/lib.dispersion.ns_cpmg_2site_star-module.html">API documentation</a>).
       </li>
     </ul>
+   </div> <!-- End of h3 section_content -->
 
-   <h3>Analytic models for MMQ-type data</h3>
+   <h3 class="collapsible_section">Analytic models for MMQ-type data</h3>
+   <div class="section_content">
     <p>The following analytic models are designed for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ, or multiple MQ) CPMG-type experiments:</p>
 
     <ul>
@@ -218,8 +223,10 @@
         <a href="/api/3.2/lib.dispersion.mmq_cr72-module.html">API documentation</a>).
       </li>
     </ul>
+   </div> <!-- End of h3 section_content -->
 
-   <h3>Numeric models for MMQ-type data</h3>
+   <h3 class="collapsible_section">Numeric models for MMQ-type data</h3>
+   <div class="section_content">
     <p>The following numeric models are designed for MMQ CPMG-type experiments:</p>
 
     <ul>
@@ -251,8 +258,10 @@
         <a href="/api/3.2/lib.dispersion.ns_mmq_3site-module.html">API documentation</a>).
       </li>
     </ul>
+   </div> <!-- End of h3 section_content -->
 
-   <h3>Analytic models for R1rho experiments</h3>
+   <h3 class="collapsible_section">Analytic models for R1rho experiments</h3>
+   <div class="section_content">
     <p>The following analytic models are designed for R<sub>1&#961;</sub>-type experiments:</p>
 
     <ul>
@@ -305,8 +314,10 @@
         <a href="/api/3.2/lib.dispersion.mp05-module.html">API documentation</a>).
       </li>
     </ul>
+   </div> <!-- End of h3 section_content -->
 
-   <h3>Numeric models for R1rho experiments</h3>
+   <h3 class="collapsible_section">Numeric models for R1rho experiments</h3>
+   <div class="section_content">
     <p>The following numeric models are designed for R<sub>1&#961;</sub>-type experiments:</p>
 
     <ul>
@@ -338,8 +349,9 @@
         <a href="/api/3.2/lib.dispersion.ns_r1rho_3site-module.html">API documentation</a>).
       </li>
     </ul>
+   </div> <!-- End of h3 section_content -->
 
-  </div>
+  </div> <!-- End of h2 section_content -->
 </div>
 
 <!-- Common relax webpage footer include -->
