--- a/docs.html
+++ b/docs.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2005-2012 Edward d'Auvergne.
+    Copyright (c) 2005-2012,2021 Edward d'Auvergne.
 
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.3
@@ -28,11 +28,10 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-  <div class="main_box">
   <h1>Documentation</h1>
 
-  <div class="main_h2">
-    <h2>The internal help system</h2>
+   <h2 class="collapsible_section">The internal help system</h2>
+   <div class="section_content">
 
       <p>To learn how to use the program relax, there are three major approaches which can be taken.  The first is the internal help system within relax.  From the command line type <em>'relax'</em> to start the program, you will then be presented with the prompt:</p>
 
@@ -43,16 +42,16 @@
       <p><em>relax> help(minimise)</em></p>
 
       <p>The information returned should be sufficient for understanding all options of that function.</p>
-  </div>
+   </div> <!-- End of h2 section_content -->
 
-  <div class="main_h2">
-    <h2>Sample scripts</h2>
+   <h2 class="collapsible_section">Sample scripts</h2>
+   <div class="section_content">
 
       <p>The easiest way of starting to use relax is by copying the sample scripts from the directory <em>'sample_scripts'</em> found within the base directory of the relax installation, and to modify it to suit the protein being studied.  Many scripts can be found which implement various aspects of model-free data analysis.</p>
-  </div>
+   </div> <!-- End of h2 section_content -->
 
-  <div class="main_h2">
-    <h2>The manual</h2>
+   <h2 class="collapsible_section">The manual</h2>
+   <div class="section_content">
 
     <p>The best source of information is the current version of the relax user manual which is distributed with relax.  It is available as both a high quality PDF and a HTML version which can be browsed online:</p>
     <ul>
@@ -81,14 +80,14 @@
     </table>
     </form>
     <!-- SiteSearch Google -->
-  </div>
-  <div class="main_h2">
-    <h2>The mailing list archives</h2>
+   </div> <!-- End of h2 section_content -->
+
+   <h2 class="collapsible_section">The mailing list archives</h2>
+   <div class="section_content">
 
       <p>Another source of information is the relax mailing list archives.  The mailing lists are described on the <a href='communication.html'>communication</a> page.  These archives can also be <a href='communication.html#mailing_list_search'>searched</a>.</p>
-  </div>
+   </div> <!-- End of h2 section_content -->
 
-  </div>
 </div>
 
 <!-- Common relax webpage footer include -->
