--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2005-2012 Edward d'Auvergne.
+    Copyright (c) 2005-2012,2021 Edward d'Auvergne.
     Copyright (c) 2011 Sebastien Morin.
 
     Permission is granted to copy, distribute and/or modify this document
@@ -28,14 +28,13 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-  <div class="main_box">
   <h1>Events</h1>
 
 
     <p>Here is a list of events where relax was presented.</p>
 
-  <div class="main_h2">
-    <h2>Talks</h2>
+  <h2 id="talks" class="collapsible_section">Talks</h2>
+  <div class="section_content">
 
     <div class="event-logo" id="Nanjing2021">
       <a href="http://www.nmr-conference.com" class="event-logo-banner"><img src="images/nanjing2021/gy_bg.jpg" alt="International NMR symposium and workshop in drug discovery"/></a>
@@ -81,11 +80,10 @@
       </tbody>
     </table>
 
+  </div> <!-- End of h2 section_content -->
 
-  </div>
-
-  <div class="main_h2">
-    <h2>Posters</h2>
+  <h2 id="posters" class="collapsible_section">Posters</h2>
+  <div class="section_content">
 
     <div class="event-logo" id="ICMRBS2012">
       <img src="images/icmrbs2012/icmrbs2012.png" alt="ICMRBS 2012" class="image"/>
@@ -268,16 +266,15 @@
       </tbody>
     </table>
 
-    </div>
+  </div> <!-- End of h2 section_content -->
 
 
-    <div class="main_h2">
-     <h2>Disclaimer</h2>
+  <h2 id="disclaimer" class="collapsible_section">Disclaimer</h2>
+  <div class="section_content">
 
      <p>These documents may only be re-used with permission from the authors.  All content is protected by copyright.</p>
 
-    </div>
-  </div>
+  </div> <!-- End of h2 section_content -->
 </div>
 
 <!-- Common relax webpage footer include -->
