--- a/links.html
+++ b/links.html
@@ -28,9 +28,7 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-<!-- Index -->
-  <div class="main_box">
-    <h1>Links</h1>
+ <h1>Links</h1>
 
     <ul>
     <li><a href="links.html#relax_infrastructure">relax infrastructure</a></li>
@@ -39,10 +37,9 @@
     <li><a href="links.html#Protein_dynamics">Protein dynamics</a></li>
     <li><a href="links.html#relax_libraries">relax libraries</a></li>
     </ul>
-  </div>
 
-  <div id="relax_infrastructure" class="main_box">
-      <h2>relax infrastructure</h2>
+  <h2 id="relax_infrastructure" class="collapsible_section">relax infrastructure</h2>
+  <div class="section_content">
 
 <table class="links_table">
   <thead>
@@ -88,9 +85,11 @@
   </tbody>
 </table>
 
+  </div> <!-- End of h2 section_content -->
 
-    <div id="Mailing_list_archives" class="main_h2">
-      <h2>Mailing list archives</h2>
+
+  <h2 id="Mailing_list_archives" class="collapsible_section">Mailing list archives</h2>
+  <div class="section_content">
 
 <table class="links_table">
   <thead>
@@ -124,10 +123,10 @@
   </tbody>
 </table>
 
+  </div> <!-- End of h2 section_content -->
 
-    </div>
-    <div id="Web_resources" class="main_h2">
-      <h2>Web resources</h2>
+  <h2 id="Web_resources" class="collapsible_section">Web resources</h2>
+  <div class="section_content">
 
 <table class="links_table">
   <thead>
@@ -189,11 +188,10 @@
   </tbody>
 </table>
 
-    </div>
-  </div>
+  </div> <!-- End of h2 section_content -->
 
-  <div id="Protein_dynamics" class="main_box">
-      <h2>Protein dynamics</h2>
+  <h2 id="Protein_dynamics" class="collapsible_section">Protein dynamics</h2>
+  <div class="section_content">
 
 <table class="links_table">
   <thead>
@@ -214,8 +212,10 @@
   </tbody>
 </table>
 
-    <div id="relax_libraries" class="main_h2">
-      <h2>relax libraries</h2>
+  </div> <!-- End of h2 section_content -->
+
+  <h2 id="relax_libraries" class="collapsible_section">relax libraries</h2>
+  <div class="section_content">
 
 <table class="links_table">
   <thead>
@@ -236,8 +236,7 @@
   </tbody>
 </table>
 
-    </div>
-  </div>
+  </div> <!-- End of h2 section_content -->
 </div>
 
 <!-- Common relax webpage footer include -->
