--- a/screenshots.html
+++ b/screenshots.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <!--
-    Copyright (c) 2005-2012 Edward d'Auvergne.
+    Copyright (c) 2005-2012,2021 Edward d'Auvergne.
     Copyright (c) 2011 Sebastien Morin.
 
     Permission is granted to copy, distribute and/or modify this document
@@ -29,19 +29,16 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-<!-- Index -->
-  <div class="main_box">
     <h1>Screenshots</h1>
 
     <ul>
       <li><a href="screenshots.html#prompt">Prompt UI screenshots</a></li>
       <li><a href="screenshots.html#gui">GUI screenshots</a></li>
     </ul>
-  </div>
 
- <div id="prompt" class="main_box">
 
-   <h2>Prompt UI screenshots</h2>
+   <h2 id="prompt" class="collapsible_section">Prompt UI screenshots</h2>
+   <div class="section_content">
 
     <h3>relax 1.3.14</h3>
 
@@ -65,9 +62,10 @@
         <br/>Mac OS X 10.6 Snow Leopard (terminal)
        </div>
      </div>
+   </div> <!-- End of h2 section_content -->
 
-  <div id="gui" class="main_h2">
-   <h2>GUI screenshots</h2>
+   <h2 id="gui" class="collapsible_section">GUI screenshots</h2>
+   <div class="section_content">
 
     <h3>relax 1.3.14</h3>
 
@@ -127,9 +125,8 @@
         <br/>About relax screen
        </div>
      </div>
+   </div> <!-- End of h2 section_content -->
 
-  </div>
- </div>
 </div>
 
 <!-- Common relax webpage footer include -->
