References: All sections are now opened at the start on mobile devices.
This enables anchors from other pages to work.

--- a/refs.html
+++ b/refs.html
@@ -201,5 +201,13 @@
 <!-- Common relax webpage footer include -->
 <!--#include virtual="footer.html" -->
 
+<!-- Start all elements shown, to enable for anchors from other pages to work on mobile devices. -->
+<script>
+    var coll = document.getElementsByClassName("collapsible_section");
+    for (i = 0; i < coll.length; i++) {
+        coll[i].nextElementSibling.style.display = "block";
+    }
+</script>
+
 </body>
 </html>
