Mobile: All table of contents are disabled on mobile devices.

--- a/communication.html
+++ b/communication.html
@@ -28,20 +28,22 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-    <h1>Interacting with the relax community</h1>
+ <h1>Interacting with the relax community</h1>
 
+  <div class="toc">
+   <ul>
+    <li><a href="communication.html#trackers">Bug, support request, and task trackers</a></li>
+    <li><a href="communication.html#mailing-lists">Mailing lists</a>
     <ul>
-     <li><a href="communication.html#trackers">Bug, support request, and task trackers</a></li>
-     <li><a href="communication.html#mailing-lists">Mailing lists</a>
-     <ul>
-      <li><a href="communication.html#relax-announce">relax-announce</a></li>
-      <li><a href="communication.html#relax-users">relax-users</a></li>
-      <li><a href="communication.html#relax-devel">relax-devel</a></li>
-      <li><a href="communication.html#relax-commits">relax-commits</a></li>
-      <li><a href="communication.html#response">Responding to messages</a></li>
-      <li><a href="communication.html#mailing_list_search">Searching the mailing lists</a></li>
-     </ul></li>
-    </ul>
+     <li><a href="communication.html#relax-announce">relax-announce</a></li>
+     <li><a href="communication.html#relax-users">relax-users</a></li>
+     <li><a href="communication.html#relax-devel">relax-devel</a></li>
+     <li><a href="communication.html#relax-commits">relax-commits</a></li>
+     <li><a href="communication.html#response">Responding to messages</a></li>
+     <li><a href="communication.html#mailing_list_search">Searching the mailing lists</a></li>
+    </ul></li>
+   </ul>
+  </div>
 
    <h2 id="trackers" class="collapsible_section">Bug, support request, and task trackers</h2>
    <div class="section_content">
