--- a/faq.html
+++ b/faq.html
@@ -28,14 +28,16 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-    <h1>Frequently Asked Questions (FAQ)</h1>
+ <h1>Frequently Asked Questions (FAQ)</h1>
 
-    <ul>
+  <div class="toc">
+   <ul>
     <li><a href="faq.html#source_code">How do I obtain the newest relax source code?</a></li>
     <li><a href="faq.html#source_code_branch">How do I check out a relax source code branch?</a></li>
     <li><a href="faq.html#radian_units">The equations (or units) used by relax are incorrect!</a></li>
     <li><a href="faq.html#missing_icons">The menu icons are missing in Linux.</a></li>
-    </ul>
+   </ul>
+  </div>
 
     <h2 id="source_code" class="collapsible_section">How do I obtain the newest relax source code?</h2>
     <div class="section_content">
