--- a/features.html
+++ b/features.html
@@ -29,17 +29,18 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-<!-- Index -->
-    <h1>Program features</h1>
+ <h1>Program features</h1>
 
-    <ul>
-      <li><a href="features.html#primary_refs">Literature</a></li>
-      <li><a href="features.html#theories">Supported NMR theories</a></li>
-      <li><a href="features.html#tools">Data analysis tools</a></li>
-      <li><a href="features.html#vis">Data visualisation</a></li>
-      <li><a href="features.html#interface">Interfacing with other programs</a></li>
-      <li><a href="features.html#UI">The user interfaces (UIs)</a></li>
-    </ul>
+  <div class="toc">
+   <ul>
+    <li><a href="features.html#primary_refs">Literature</a></li>
+    <li><a href="features.html#theories">Supported NMR theories</a></li>
+    <li><a href="features.html#tools">Data analysis tools</a></li>
+    <li><a href="features.html#vis">Data visualisation</a></li>
+    <li><a href="features.html#interface">Interfacing with other programs</a></li>
+    <li><a href="features.html#UI">The user interfaces (UIs)</a></li>
+   </ul>
+  </div>
 
    <h2 id="primary_refs" class="collapsible_section">Literature</h2>
    <div class="section_content">
