--- a/links.html
+++ b/links.html
@@ -30,13 +30,15 @@
 <div class="main">
  <h1>Links</h1>
 
-    <ul>
+  <div class="toc">
+   <ul>
     <li><a href="links.html#relax_infrastructure">relax infrastructure</a></li>
     <li><a href="links.html#Mailing_list_archives">Mailing list archives</a></li>
     <li><a href="links.html#Web_resources">Web resources</a></li>
     <li><a href="links.html#Protein_dynamics">Protein dynamics</a></li>
     <li><a href="links.html#relax_libraries">relax libraries</a></li>
-    </ul>
+   </ul>
+  </div>
 
   <h2 id="relax_infrastructure" class="collapsible_section">relax infrastructure</h2>
   <div class="section_content">
