--- a/screenshots.html
+++ b/screenshots.html
@@ -29,12 +29,14 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-    <h1>Screenshots</h1>
+ <h1>Screenshots</h1>
 
-    <ul>
-      <li><a href="screenshots.html#prompt">Prompt UI screenshots</a></li>
-      <li><a href="screenshots.html#gui">GUI screenshots</a></li>
-    </ul>
+  <div class="toc">
+   <ul>
+    <li><a href="screenshots.html#prompt">Prompt UI screenshots</a></li>
+    <li><a href="screenshots.html#gui">GUI screenshots</a></li>
+   </ul>
+  </div>
 
 
    <h2 id="prompt" class="collapsible_section">Prompt UI screenshots</h2>
