--- a/windows_devel.html
+++ b/windows_devel.html
@@ -28,11 +28,12 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-  <h1>MS Windows development platform</h1>
+ <h1>MS Windows development platform</h1>
 
    <p>By installing the following software, you will be able to compile relax's C modules, compile the LaTeX manual, generate relax distribution packages, check out source code from the relax repository, cleanly edit relax's source code, and GPG sign files for security.</p>
 
 <!-- Menu -->
+  <div class="toc">
    <ul>
     <li><a href="#scons">1. SCons</a>
     <ul>
@@ -98,6 +99,7 @@
     </ul></li>
 
    </ul>
+  </div>
 <!-- Menu fin -->
 
 
