--- a/download.html
+++ b/download.html
@@ -31,35 +31,37 @@
 <div class="main">
  <h1>relax downloads</h1>
 
+  <div class="toc">
+   <ul>
+   <li><a href="download.html#Current_release">Current release</a>
     <ul>
-    <li><a href="download.html#Current_release">Current release</a>
-     <ul>
-      <li><a href="download.html#Dependencies">Dependencies</a></li>
-      <li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
-      <li><a href="download.html#MS_Windows">MS Windows</a></li>
-      <li><a href="download.html#Mac_OS_X">Mac OS X</a></li>
-      <li><a href="download.html#Source_code_release">Source code release</a></li>
-     </ul></li>
-    <li><a href="download.html#Source_code_repository">Source code repository</a></li>
-    <li><a href="download.html#Security">Security</a></li>
-    <li><a href="download.html#New_releases">New releases</a></li>
-    <li><a href="download.html#All_releases">All releases</a>
-     <ul>
-      <li><a href="download.html#series_5.0">5.0 series</a></li>
-      <li><a href="download.html#series_4.1">4.1 series</a></li>
-      <li><a href="download.html#series_4.0">4.0 series</a></li>
-      <li><a href="download.html#series_3.3">3.3 series</a></li>
-      <li><a href="download.html#series_3.2">3.2 series</a></li>
-      <li><a href="download.html#series_3.1">3.1 series</a></li>
-      <li><a href="download.html#series_3.0">3.0 series</a></li>
-      <li><a href="download.html#series_2.2">2.2 series</a></li>
-      <li><a href="download.html#series_2.1">2.1 series</a></li>
-      <li><a href="download.html#series_2.0">2.0 series</a></li>
-      <li><a href="download.html#series_1.3">1.3 series</a></li>
-      <li><a href="download.html#series_1.2">1.2 series</a></li>
-      <li><a href="download.html#series_1.0">1.0 series</a></li>
-     </ul></li>
-    </ul>
+     <li><a href="download.html#Dependencies">Dependencies</a></li>
+     <li><a href="download.html#GNU_Linux">GNU/Linux</a></li>
+     <li><a href="download.html#MS_Windows">MS Windows</a></li>
+     <li><a href="download.html#Mac_OS_X">Mac OS X</a></li>
+     <li><a href="download.html#Source_code_release">Source code release</a></li>
+    </ul></li>
+   <li><a href="download.html#Source_code_repository">Source code repository</a></li>
+   <li><a href="download.html#Security">Security</a></li>
+   <li><a href="download.html#New_releases">New releases</a></li>
+   <li><a href="download.html#All_releases">All releases</a>
+    <ul>
+     <li><a href="download.html#series_5.0">5.0 series</a></li>
+     <li><a href="download.html#series_4.1">4.1 series</a></li>
+     <li><a href="download.html#series_4.0">4.0 series</a></li>
+     <li><a href="download.html#series_3.3">3.3 series</a></li>
+     <li><a href="download.html#series_3.2">3.2 series</a></li>
+     <li><a href="download.html#series_3.1">3.1 series</a></li>
+     <li><a href="download.html#series_3.0">3.0 series</a></li>
+     <li><a href="download.html#series_2.2">2.2 series</a></li>
+     <li><a href="download.html#series_2.1">2.1 series</a></li>
+     <li><a href="download.html#series_2.0">2.0 series</a></li>
+     <li><a href="download.html#series_1.3">1.3 series</a></li>
+     <li><a href="download.html#series_1.2">1.2 series</a></li>
+     <li><a href="download.html#series_1.0">1.0 series</a></li>
+    </ul></li>
+   </ul>
+  </div>
 
 
 <!-- Current release -->
