Added the Font Awesome 4.7.0 collection to the repository and switched to it.
This is licensed as SIL OFL 1.1 for the fonts themselves and MIT License for the CSS file.  The
files were downloaded from https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/.

--- a/head.html
+++ b/head.html
@@ -52,6 +52,6 @@
   </script>
 
   <!-- Icon for the mobile menu -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- End SSI head element -->
