Introductory text and graphics have been added to most of the relax webpages.
This improves the experience on mobile devices.

--- a/communication.html
+++ b/communication.html
@@ -30,6 +30,16 @@
 <div class="main">
  <h1>Interacting with the relax community</h1>
 
+  <div class="main_graphic small">
+   <img src="/images/cluster.svg"/ alt="A cluster of nuclear magnetic spins">
+  </div>
+
+  <p>
+   As is the case with most free software projects, all communications about relax are public.
+   Discussions occur on the various relax mailing lists.
+   However issues with relax itself are reported using the specialised tracker infrastructure.
+  </p>
+
   <div class="toc">
    <ul>
     <li><a href="communication.html#trackers">Bug, support request, and task trackers</a></li>
