--- a/docs.html
+++ b/docs.html
@@ -28,12 +28,24 @@
 <!--#include virtual="menu.html" -->
 
 <div class="main">
-  <h1>Documentation</h1>
+ <h1>Documentation</h1>
+
+  <div class="main_graphic small">
+   <img src="/images/pipe_bundle.png"/ alt="A representation of the relax internal data structure">
+  </div>
+
+  <p>
+   To learn how to use the program relax, there are a number of approaches which can be taken.
+   These included accessing the internal help system, copying and modifying the sample relax scripts, exploring the extensive relax manual, and searching the decades long mailing list archives.
+  </p>
 
    <h2 class="collapsible_section">The internal help system</h2>
    <div class="section_content">
 
-      <p>To learn how to use the program relax, there are three major approaches which can be taken.  The first is the internal help system within relax.  From the command line type <em>'relax'</em> to start the program, you will then be presented with the prompt:</p>
+      <p>
+       To access the internal help system within relax, from the command line firstly type <em>'relax'</em> to start the program.
+       You will be presented with the prompt:
+      </p>
 
       <p><em>relax></em></p>
 
