--- a/screenshots.html
+++ b/screenshots.html
@@ -31,6 +31,13 @@
 <div class="main">
  <h1>Screenshots</h1>
 
+  <div class="main_graphic small">
+   <img src="/images/screenshots/graphic.svg"/ alt="Screenshot graphic for the software relax">
+  </div>
+  <p>
+   Here are a number of screenshots of relax in action.
+  </p>
+
   <div class="toc">
    <ul>
     <li><a href="screenshots.html#prompt">Prompt UI screenshots</a></li>
