Introductory text for the events and references pages.

--- a/events.html
+++ b/events.html
@@ -30,8 +30,11 @@
 <div class="main">
   <h1>Events</h1>
 
-
-    <p>Here is a list of events where relax was presented.</p>
+   <p>
+    Over the years, the software relax has been presented at a number of conferences, symposiums, meetings, workshops, and other events.
+    Below are presentations in which the main subject is relax.
+    The original poster or slides are available for download, but you should <a href="#disclaimer">contact the authors for any reuse</a>.
+   </p>
 
   <h2 id="talks" class="collapsible_section">Talks</h2>
   <div class="section_content">
