Mbbile: Redesign of the mobile menu.
The icon positions have been swapped, the menu icon now does not change colours and has no
background, and the mobile menu activation causes the 'main' and 'footer' div elements to be hidden.

--- a/head.html
+++ b/head.html
@@ -43,10 +43,16 @@
   <script type="text/javascript">
     function toggleMobileMenu() {
       var menu = document.getElementById("menu_elements");
+      var main = document.getElementsByClassName("main")[0];
+      var footer = document.getElementsByClassName("footer")[0];
       if (menu.style.display == "block") {
         menu.style.display = "none";
+        main.style.display = "block";
+        footer.style.display = "block";
       } else {
         menu.style.display = "block";
+        main.style.display = "none";
+        footer.style.display = "none";
       }
     }
   </script>
