--- a/menu.html
+++ b/menu.html
@@ -8,9 +8,9 @@
     <a href="/" type="image/png"><img src="/relax_logo_hires.png"/></a>
 
     <!-- Mobile menu toggle -->
-    <a href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
+    <div href="javascript:void(0);" class="icon" onclick="toggleMobileMenu()">
       <i class="fa fa-bars"></i>
-    </a>
+    </div>
   </div>
 
   <div id="menu_elements">
