Switched the graphics for the features and communication pages.

--- a/features.html
+++ b/features.html
@@ -31,8 +31,8 @@
 <div class="main">
  <h1>Program features</h1>
 
-  <div class="main_graphic large">
-   <img src="/images/dipole_pair.png"/ alt="A nitrogen-proton dipole pair in the presence of an external magnetic field">
+  <div class="main_graphic small">
+   <img src="/images/cluster.svg"/ alt="A cluster of nuclear magnetic spins">
   </div>
 
   <p>
