Mobile: Set a browser theme color (currently only seen on a few mobile browsers).

--- a/head.html
+++ b/head.html
@@ -7,6 +7,8 @@
 
   <!--Mobile device support-->
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="theme-color" content="#51c3d3"/>
+  <!-- Dark theme: <meta name="theme-color" content="#1c688d"/> -->
 
   <!--relax css-->
   <link rel="stylesheet" type="text/css" href="/relax.css"/>
